finalized index and project page design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
 
 
  <footer>
- 	<div class="footer-content">
+ 	<div class="footer-content buffer">
  		<div class="footer-wrapper">
  			<p class="footer-item">Chris Mlynarski©</p>
 
  			<div class="icons-container">
  				<!-- <p class="email footer-item">cmlynars@gmail.com</p> -->
 
- 				{% include icons.html %}
+ 				{% include social_icons.html %}
  	
  			</div>
  		</div>
