--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <header>
-    <nav>
+    <nav class="buffer">
         <div class="nav-container">
             <a href="{{ site.baseurl }}/"><div class="logo">Chris Mlynarski</div></a>
             <ul>
