--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,11 +3,11 @@ title: Project
 layout: default
 ---
 
-	<section class="project_content-container">
+	<section class="buffer project_content-container">
 
 		<div class="breadcrumb-container">
 			<p><a href="{{ site.baseurl }}/">All Projects</a></p>
-			<p class="current-project">• {{ page.title }}</p>
+			<p class="current-project">/ {{ page.title }}</p>
 		</div>
 
 		<div class="description-container">
@@ -18,12 +18,20 @@ layout: default
 			<p>
 				{{ content }}
 			</p>
-			
+		</div>
+
+		<div class="project_image-container">
+			{% for image in page.images %}
+			<img src="{{ site.baseurl }}/img/{{ image }}" alt="">
+			{% endfor %}
+		</div>
+
+		<div class="links-container">
 			{% assign next = page.order | plus: 1 %}
 			{% for projects in site.pages %}
 			{% if projects.order == next %}
 				
-			<a class="next-project" href="{{ site.baseurl }}/{{ projects.url }}">{{ projects.title }}</a>
+			<a class="single-link-container" href="{{ site.baseurl }}/{{ projects.url }}"><p class="project-link">Next</p>{% include right_arrow.html %}</a>
 			
 			{% endif %}
 			{% endfor %}
@@ -32,19 +40,10 @@ layout: default
 			{% for projects in site.pages %}
 			{% if projects.order == previous %}
 
-			<a class="previous-project" href="{{ site.baseurl }}/{{ projects.url }}">{{ projects.title }}</a>
+			<a class="single-link-container" href="{{ site.baseurl }}/{{ projects.url }}">{% include left_arrow.html %}<p class="project-link">Previous</p></a>
 
 			{% endif %}
 			{% endfor %}
-			
 		</div>
-
-		<div class="project_image-container">
-
-			{% for image in page.images %}
-			<img src="{{ site.baseurl }}/img/{{ image }}" alt="">
-			{% endfor %}
-
-		</div>
-
+		
 	</section>
