--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,12 +9,19 @@ $susy: (
 	/*debug: (image: show)*/
 	);
 
+.buffer {
+	@media (max-width: $large-break) {
+	margin-left: 16px !important;
+	margin-right: 16px !important;	
+	}
+}
+
 /* ---------------------------------------------------------------------
  Base Styles
  ----------------------------------------------------f-------------------- */
 
 * {
-	/*border: 1px solid red !important;*/
+	border: 1px solid red !important;
 	@include box-sizing(border-box);
 }
 
@@ -47,8 +54,8 @@ h2 {
 
 h3 {
 	color: $primary;
-	font-size: 26px;
-	text-transform: uppercase;
+	font-size: 24px;
+	/*text-transform: uppercase;*/
 	font-weight: 600;
 	letter-spacing: .25px;
 }
@@ -64,7 +71,6 @@ p {
 	color: $secondary;
 	font-size: 16px;
 	line-height: 21px;
-	font-weight: 400;
 	letter-spacing: .25px;
 }
 
