--- a/_includes/right_arrow.html
+++ b/_includes/right_arrow.html
@@ -1,2 +1,9 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24"><polyline class="arrow" fill="none" stroke="#444444" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" points="10,8 14,12 10,16 
-" transform="translate(0, 0)" stroke-linejoin="miter"/></svg>
+<?xml version="1.0" encoding="UTF-8"?>
+<svg width="8px" height="24px" viewBox="0 0 8 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <!-- Generator: Sketch 44.1 (41455) - http://www.bohemiancoding.com/sketch -->
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="square">
+        <g id="right_arrow" stroke-width="2">
+            <polyline class="arrow" points="2 2 6 6 2 10" transform="translate(0, -1.5)"></polyline>
+        </g>
+    </g>
+</svg>
