--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ $background-color: rgba(237, 241, 245, 1);*/
  ----------------------------------------------------f-------------------- */
 /* line 23, ../sass/_base.scss */
 * {
-  border: 1px solid red !important;
+  /*border: 1px solid red !important;*/
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -146,28 +146,45 @@ h2 {
 h3 {
   color: #424242;
   font-size: 24px;
-  /*text-transform: uppercase;*/
   font-weight: 600;
   letter-spacing: .25px;
 }
+@media (max-width: 768px) {
+  /* line 55, ../sass/_base.scss */
+  h3 {
+    font-size: 21px;
+  }
+}
 
-/* line 63, ../sass/_base.scss */
+/* line 66, ../sass/_base.scss */
 h4 {
   color: #A8A8A8;
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+@media (max-width: 768px) {
+  /* line 66, ../sass/_base.scss */
+  h4 {
+    font-size: 13px;
+  }
+}
 
-/* line 70, ../sass/_base.scss */
+/* line 77, ../sass/_base.scss */
 p {
   color: #555;
   font-size: 16px;
   line-height: 21px;
   letter-spacing: .25px;
 }
+@media (max-width: 768px) {
+  /* line 77, ../sass/_base.scss */
+  p {
+    font-size: 15px;
+  }
+}
 
-/* line 77, ../sass/_base.scss */
+/* line 88, ../sass/_base.scss */
 a {
   text-decoration: none;
   -moz-transition-property: color, fill;
@@ -183,7 +200,7 @@ a {
   -webkit-transition-timing-function: ease-in;
   transition-timing-function: ease-in;
 }
-/* line 83, ../sass/_base.scss */
+/* line 94, ../sass/_base.scss */
 a:visted {
   color: inherit;
 }
@@ -560,7 +577,7 @@ Project Cards (Medium Breakpoint)
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
-  padding: 4rem 0 9.375rem 0;
+  padding: 64px 0 150px 0;
 }
 /* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
 .project_content-container:after {
@@ -568,11 +585,23 @@ Project Cards (Medium Breakpoint)
   display: block;
   clear: both;
 }
+@media (max-width: 1024px) {
+  /* line 5, ../sass/_project.scss */
+  .project_content-container {
+    padding: 32px 0 75px 0;
+  }
+}
+@media (max-width: 768px) {
+  /* line 5, ../sass/_project.scss */
+  .project_content-container {
+    padding: 24px 0 40px 0;
+  }
+}
 
 /* ---------------------------------------------------------------------
  Breadcrumb
  ------------------------------------------------------------------------ */
-/* line 14, ../sass/_project.scss */
+/* line 22, ../sass/_project.scss */
 .breadcrumb-container {
   width: 97.61905%;
   float: left;
@@ -581,26 +610,26 @@ Project Cards (Medium Breakpoint)
   display: flex;
   margin-bottom: 24px;
 }
-/* line 19, ../sass/_project.scss */
+/* line 27, ../sass/_project.scss */
 .breadcrumb-container .current-project {
   margin-left: 4px;
 }
-/* line 23, ../sass/_project.scss */
+/* line 31, ../sass/_project.scss */
 .breadcrumb-container a {
   color: #44C5A2;
 }
-/* line 26, ../sass/_project.scss */
+/* line 34, ../sass/_project.scss */
 .breadcrumb-container a:hover {
   color: #6bd1b5;
 }
-/* line 30, ../sass/_project.scss */
+/* line 38, ../sass/_project.scss */
 .breadcrumb-container a:visted {
   color: inherit;
 }
 
 /*Hide at Small Breakpoint*/
 @media (max-width: 1024px) {
-  /* line 39, ../sass/_project.scss */
+  /* line 47, ../sass/_project.scss */
   .breadcrumb-container {
     display: none;
   }
@@ -608,7 +637,7 @@ Project Cards (Medium Breakpoint)
 /* ---------------------------------------------------------------------
  Images (Mobile-first)
  ------------------------------------------------------------------------ */
-/* line 48, ../sass/_project.scss */
+/* line 56, ../sass/_project.scss */
 .project_image-container {
   /*Mobile-first Width*/
   width: 97.61905%;
@@ -616,19 +645,19 @@ Project Cards (Medium Breakpoint)
   margin-left: 1.19048%;
   margin-right: 1.19048%;
 }
-/* line 52, ../sass/_project.scss */
+/* line 60, ../sass/_project.scss */
 .project_image-container img {
   margin-bottom: 2.5rem;
   width: 100%;
 }
-/* line 56, ../sass/_project.scss */
+/* line 64, ../sass/_project.scss */
 .project_image-container img:last-child {
   margin-bottom: 0;
 }
 
 /*Shrink at Large Breakpoint*/
 @media (min-width: 1024px) {
-  /* line 65, ../sass/_project.scss */
+  /* line 73, ../sass/_project.scss */
   .project_image-container {
     width: 58.03571%;
     float: left;
@@ -639,7 +668,7 @@ Project Cards (Medium Breakpoint)
 /* ---------------------------------------------------------------------
 Project Description
 ------------------------------------------------------------------------ */
-/* line 75, ../sass/_project.scss */
+/* line 83, ../sass/_project.scss */
 .description-container {
   width: 30.95238%;
   float: right;
@@ -648,19 +677,19 @@ Project Description
   margin-bottom: 24px;
 }
 
-/* line 80, ../sass/_project.scss */
+/* line 88, ../sass/_project.scss */
 .project-description {
   margin-bottom: 4px;
 }
 
-/* line 84, ../sass/_project.scss */
+/* line 92, ../sass/_project.scss */
 .project-title {
   margin-bottom: 40px;
 }
 
 /*Adjust at Small Breakpoint*/
 @media (max-width: 1024px) {
-  /* line 92, ../sass/_project.scss */
+  /* line 100, ../sass/_project.scss */
   .description-container {
     width: 97.61905%;
     float: left;
@@ -668,63 +697,60 @@ Project Description
     margin-right: 1.19048%;
   }
 
-  /* line 96, ../sass/_project.scss */
+  /* line 104, ../sass/_project.scss */
   .project-title {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
   }
 }
 /* ---------------------------------------------------------------------
  Links Container
  ------------------------------------------------------------------------ */
-/* line 105, ../sass/_project.scss */
+/* line 113, ../sass/_project.scss */
 .links-container {
   width: 30.95238%;
   float: right;
   margin-left: 1.19048%;
   margin-right: 1.19048%;
   display: flex;
-  flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
 }
 
 /*Widen at Small Breakpoint*/
 @media (max-width: 1024px) {
-  /* line 116, ../sass/_project.scss */
+  /* line 123, ../sass/_project.scss */
   .links-container {
     width: 97.61905%;
     float: left;
     margin-left: 1.19048%;
     margin-right: 1.19048%;
     margin-top: 24px;
+    justify-content: center;
   }
 }
-/* line 122, ../sass/_project.scss */
+/* line 130, ../sass/_project.scss */
 .single-link-container {
   display: flex;
-  -moz-transition-property: color, fill;
-  -o-transition-property: color, fill;
-  -webkit-transition-property: color, fill;
-  transition-property: color, fill;
-  -moz-transition-duration: 0.09s;
-  -o-transition-duration: 0.09s;
-  -webkit-transition-duration: 0.09s;
-  transition-duration: 0.09s;
-  -moz-transition-timing-function: ease-in;
-  -o-transition-timing-function: ease-in;
-  -webkit-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
+  color: #A8A8A8;
+  stroke: #A8A8A8;
+  /*Space between links at less than large breakpoint*/
 }
-/* line 129, ../sass/_project.scss */
+/* line 136, ../sass/_project.scss */
 .single-link-container:hover .project-link {
   color: #44C5A2;
 }
-/* line 133, ../sass/_project.scss */
+/* line 140, ../sass/_project.scss */
 .single-link-container:hover .arrow {
   stroke: #44C5A2;
 }
+@media (max-width: 1024px) {
+  /* line 130, ../sass/_project.scss */
+  .single-link-container {
+    margin: 0 16px;
+  }
+}
 
-/* line 139, ../sass/_project.scss */
+/* line 151, ../sass/_project.scss */
 .project-link {
   font-size: 16px;
   color: #A8A8A8;
@@ -741,8 +767,16 @@ Project Description
   -webkit-transition-timing-function: ease-in;
   transition-timing-function: ease-in;
 }
+/* line 159, ../sass/_project.scss */
+.project-link:nth-child(1) {
+  margin-right: 6px;
+}
+/* line 163, ../sass/_project.scss */
+.project-link:nth-child(2) {
+  margin-left: 6px;
+}
 
-/* line 148, ../sass/_project.scss */
+/* line 168, ../sass/_project.scss */
 .arrow {
   stroke: #A8A8A8;
   -moz-transition-property: color, fill;
@@ -767,7 +801,7 @@ Project Description
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
-  padding: 4rem 0 9.375rem 0;
+  padding: 32px 0 75px 0;
 }
 /* line 12, ../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.2.12/sass/susy/output/support/_clearfix.scss */
 .about_page-container:after {
@@ -775,25 +809,32 @@ Project Description
   display: block;
   clear: both;
 }
+@media (max-width: 768px) {
+  /* line 5, ../sass/_about.scss */
+  .about_page-container {
+    padding: 24px 0 32px 0;
+  }
+}
 
 /* ---------------------------------------------------------------------
  Image Container
  ------------------------------------------------------------------------ */
-/* line 15, ../sass/_about.scss */
+/* line 18, ../sass/_about.scss */
 .about_image-container {
   width: 47.61905%;
   float: right;
   margin-left: 1.19048%;
   margin-right: 1.19048%;
-  overflow: hidden;
   margin-bottom: 40px;
 }
+/* line 22, ../sass/_about.scss */
+.about_image-container img {
+  width: 100%;
+}
 
-/* ---------------------------------------------------------------------
- Image Container (Small, Medium Breakpoint)
- ------------------------------------------------------------------------ */
+/*Full width at small breakpoint*/
 @media (max-width: 768px) {
-  /* line 26, ../sass/_about.scss */
+  /* line 30, ../sass/_about.scss */
   .about_image-container {
     width: 97.61905%;
     float: left;
@@ -804,23 +845,29 @@ Project Description
 /* ---------------------------------------------------------------------
  About Blurb
  ------------------------------------------------------------------------ */
-/* line 35, ../sass/_about.scss */
+/* line 39, ../sass/_about.scss */
 .about-blurb {
   width: 39.28571%;
   float: left;
   margin-left: 1.19048%;
   margin-right: 1.19048%;
 }
-/* line 38, ../sass/_about.scss */
-.about-blurb p {
-  margin-top: 4rem;
+/* line 42, ../sass/_about.scss */
+.about-blurb h3 {
+  margin-bottom: 40px;
+}
+@media (max-width: 768px) {
+  /* line 48, ../sass/_about.scss */
+  .about-blurb h3 {
+    margin-bottom: 16px;
+  }
 }
 
 /* ---------------------------------------------------------------------
  About Blurb (Small, Medium Breakpoint)
  ------------------------------------------------------------------------ */
 @media (max-width: 768px) {
-  /* line 48, ../sass/_about.scss */
+  /* line 59, ../sass/_about.scss */
   .about-blurb {
     width: 97.61905%;
     float: left;
