--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -4,8 +4,11 @@
 
  .about_page-container {
  	@include container($max-width);
- 	padding: 4rem 0 9.375rem 0;
+ 	padding: 32px 0 75px 0;
 
+ 	@media (max-width: $medium-break) {
+ 		padding: 24px 0 32px 0;
+ 	}
  }
 
 /* ---------------------------------------------------------------------
@@ -14,13 +17,14 @@
 
  .about_image-container {
  	@include span(6 last);
- 	overflow: hidden;
  	margin-bottom: 40px;
+
+ 	img {
+ 		width: 100%;
+ 	}
  }
 
-/* ---------------------------------------------------------------------
- Image Container (Small, Medium Breakpoint)
- ------------------------------------------------------------------------ */
+ /*Full width at small breakpoint*/
 
  @media (max-width: $medium-break) {
  	.about_image-container {
@@ -35,8 +39,15 @@
  .about-blurb {
  	@include span(5);
 
- 	p {
- 		margin-top: 4rem;
+ 	h3 {
+ 		margin-bottom: 40px;
+ 	}
+
+
+ 	@media (max-width: $medium-break) {
+ 		h3 {
+ 			margin-bottom: 16px; 	
+ 		}
  	}
  }
 
