--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -21,7 +21,7 @@ $susy: (
  ----------------------------------------------------f-------------------- */
 
 * {
-	border: 1px solid red !important;
+	/*border: 1px solid red !important;*/
 	@include box-sizing(border-box);
 }
 
@@ -55,9 +55,12 @@ h2 {
 h3 {
 	color: $primary;
 	font-size: 24px;
-	/*text-transform: uppercase;*/
 	font-weight: 600;
 	letter-spacing: .25px;
+	
+	@media (max-width: $medium-break) {
+	font-size: 21px;	
+	}
 }
 
 h4 {
@@ -65,6 +68,10 @@ h4 {
 	font-size: 14px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
+
+	@media (max-width: $medium-break) {
+	font-size: 13px;	
+	}
 }
 
 p {
@@ -72,6 +79,10 @@ p {
 	font-size: 16px;
 	line-height: 21px;
 	letter-spacing: .25px;
+
+	@media (max-width: $medium-break) {
+	font-size: 15px;	
+	}
 }
 
 a {
