--- a/sass/_project.scss
+++ b/sass/_project.scss
@@ -4,7 +4,15 @@
 
  .project_content-container {
  	@include container($max-width);
- 	padding: 4rem 0 9.375rem 0;
+ 	padding: 64px 0 150px 0;
+	
+	 @media (max-width: $large-break) {
+	 	padding: 32px 0 75px 0;
+	 }
+
+	 @media (max-width: $medium-break) {
+	 	padding: 24px 0 40px 0;
+	 }
  }
 
 /* ---------------------------------------------------------------------
@@ -94,7 +102,7 @@
  	}
 
  	.project-title {
- 		margin-bottom: 8px;
+ 		margin-bottom: 16px;
  	}	
  }
 
@@ -105,7 +113,6 @@
  .links-container {
  	@include span(4 last);
  	display: flex;
- 	flex-direction: row-reverse;
  	justify-content: space-between;
  	align-items: center;
  }
@@ -116,14 +123,14 @@
  	.links-container {
  		@include span(12);
  		margin-top: 24px;
+ 		justify-content: center;
  	}
  }
 
  .single-link-container {
  	display: flex;
- 	@include transition-property(color, fill);
-	@include transition-duration(.09s);
-	@include transition-timing-function(ease-in);
+ 	color: $tertiary;
+ 	stroke: $tertiary;
 
  	&:hover {
  		.project-link {
@@ -134,6 +141,11 @@
  			stroke: $accent;
  		}
  	}
+
+ 	/*Space between links at less than large breakpoint*/
+	@media (max-width: $large-break) {
+	margin: 0 16px;
+	}
  }
 
  .project-link {
@@ -143,6 +155,14 @@
  	@include transition-property(color, fill);
 	@include transition-duration(.09s);
 	@include transition-timing-function(ease-in);
+
+	&:nth-child(1) { 
+		margin-right: 6px;
+	}
+
+	&:nth-child(2) { 
+		margin-left: 6px;
+	}
  }
 
  .arrow {
