--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -76,6 +76,8 @@
 
  .card-image {
  	background-repeat: no-repeat;
+ 	background-position: center;
+ 	background-size: cover;
  	height: 265px;
  }
 
