--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,6 +7,7 @@
 $secondary: #7893A1;
 $tertiary: #9DA9B0;
 $accent: #4BC180;
+$link-hover: lighten( $accent, 10% );
 $background-color: rgba(237, 241, 245, 1);*/
 
 /* === Gray Theme === */
@@ -14,6 +15,7 @@ $primary: #424242;
 $secondary: #555;
 $tertiary: #A8A8A8;
 $accent: #44C5A2;
+$link-hover: lighten( $accent, 10% );
 $background-color: rgba(242, 242, 242, 1);
 
 
@@ -37,7 +39,5 @@ $logo-font: 'Montserrat', sans-serif;
 
 
 /* === SHADOWS === */
-/*$card-shadow: 0 10px 15px rgba(44, 48, 49, .15);*/
-/*$hover-shadow: 0 15px 30px rgba(44, 48, 49, .20);*/
 $card-shadow: 0 10px 15px rgba(0, 0, 0, .15);
 $hover-shadow: 0 15px 30px rgba(0, 0, 0, .20);
