--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -51,6 +51,15 @@
  	}
  }
 
+ .about-link {
+ 	color: $accent;
+ 	font-weight: 600;
+
+ 	&:hover {
+ 			color: $link-hover;
+ 		}	
+ }
+
 /* ---------------------------------------------------------------------
  About Blurb (Small, Medium Breakpoint)
  ------------------------------------------------------------------------ */
