--- a/sass/_background.scss
+++ b/sass/_background.scss
@@ -13,6 +13,26 @@
  	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, $background-color 30%, $background-color 100%));	
  }
 
- .project-background {
+ .avant-background {
+ 	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 75%, $background-color 75%, $background-color 100%));	
+ }
+
+ .jiang_china_design-background {
+ 	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 34%, $background-color 34%, $background-color 100%));	
+ }
+
+ .listening_devices-background {
+ 	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, $background-color 30%, $background-color 100%));	
+ }
+
+ .morningstar-background {
+ 	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 57%, $background-color 57%, $background-color 100%));	
+ }
+
+ .planet_finance_china-background {
+ 	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 46%, $background-color 46%, $background-color 100%));	
+ }
+
+ .smart_air-background {
  	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, $background-color 30%, $background-color 100%));	
  }
