--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -30,6 +30,11 @@
  	font-size: 1.75rem;
  	line-height: 2.625rem;
  	font-weight: 300;
+
+ 	@media (max-width: $medium-break) {
+ 		font-size: 21px;
+ 		line-height: 32px;
+ 	}
  }
 
 /* ---------------------------------------------------------------------
