--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -19,8 +19,7 @@
  }
 
  .footer-item {
- 	/*margin-bottom: 1rem;*/
- 	color: $secondary;
+ 	color: $tertiary;
  	font-family: $body-font;
  	font-size: 14px;
  	letter-spacing: 1px;
