--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -39,5 +39,6 @@ $logo-font: 'Montserrat', sans-serif;
 
 
 /* === SHADOWS === */
-$card-shadow: 0 10px 15px rgba(0, 0, 0, .15);
+/*$card-shadow: 0 10px 15px rgba(0, 0, 0, .15);*/
+$card-shadow: 0 6px 10px rgba(0, 0, 0, .20);
 $hover-shadow: 0 15px 30px rgba(0, 0, 0, .20);
