--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,7 @@
 /* ---------------------------------------------------------------------
  Imports
 ------------------------------------------------------------------------ */
-@import url("https://fonts.googleapis.com/css?family=Hind:300,400,500|Open+Sans:300,400,600,700");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:800");
-@import url("https://fonts.googleapis.com/css?family=Montserrat:600");
+@import url("https://fonts.googleapis.com/css?family=Hind:400,700|Montserrat:600|Open+Sans:300,400,700");
 /* line 5, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -165,7 +163,8 @@ h2 {
 /* line 72, ../sass/_base.scss */
 h3 {
   color: #424242;
-  font-size: 24px;
+  font-family: "Hind", sans-serif;
+  font-size: 28px;
   font-weight: 600;
   letter-spacing: .25px;
 }
@@ -176,21 +175,32 @@ h3 {
   }
 }
 
-/* line 83, ../sass/_base.scss */
+/* line 84, ../sass/_base.scss */
 h4 {
-  color: #A8A8A8;
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+  color: #424242;
+  font-size: 16px;
+  font-weight: 700;
 }
 @media (max-width: 768px) {
-  /* line 83, ../sass/_base.scss */
+  /* line 84, ../sass/_base.scss */
   h4 {
-    font-size: 13px;
+    font-size: 14px;
   }
 }
 
 /* line 94, ../sass/_base.scss */
+h5 {
+  color: #A8A8A8;
+  font-size: 15px;
+}
+@media (max-width: 768px) {
+  /* line 94, ../sass/_base.scss */
+  h5 {
+    font-size: 14px;
+  }
+}
+
+/* line 103, ../sass/_base.scss */
 p {
   color: #555;
   font-size: 16px;
@@ -198,13 +208,13 @@ p {
   letter-spacing: .25px;
 }
 @media (max-width: 768px) {
-  /* line 94, ../sass/_base.scss */
+  /* line 103, ../sass/_base.scss */
   p {
     font-size: 15px;
   }
 }
 
-/* line 105, ../sass/_base.scss */
+/* line 114, ../sass/_base.scss */
 a {
   text-decoration: none;
   -moz-transition-property: color, fill;
@@ -220,7 +230,7 @@ a {
   -webkit-transition-timing-function: ease-in;
   transition-timing-function: ease-in;
 }
-/* line 111, ../sass/_base.scss */
+/* line 120, ../sass/_base.scss */
 a:visted {
   color: inherit;
 }
@@ -230,7 +240,7 @@ a:visted {
  ------------------------------------------------------------------------ */
 /* line 4, ../sass/_nav.scss */
 nav {
-  max-width: 1140px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -306,7 +316,7 @@ footer {
 
 /* line 8, ../sass/_footer.scss */
 .footer-content {
-  max-width: 1140px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   margin: 0 auto;
@@ -466,7 +476,7 @@ footer {
  ------------------------------------------------------------------------ */
 /* line 5, ../sass/_index.scss */
 .project-content {
-  max-width: 1140px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding: 88px 0 60px 0;
@@ -485,7 +495,7 @@ footer {
 .project-header {
   width: 100%;
   float: left;
-  margin-bottom: 126px;
+  margin-bottom: 88px;
 }
 
 /* line 19, ../sass/_index.scss */
@@ -575,59 +585,69 @@ footer {
 
 /* line 77, ../sass/_index.scss */
 .card-content {
-  padding: 16px 1.5rem 16px 1.5rem;
+  padding: 16px 1.5rem 18px 1.5rem;
 }
 /* line 80, ../sass/_index.scss */
-.card-content h4 {
+.card-content h3 {
   margin-bottom: 4px;
 }
-/* line 84, ../sass/_index.scss */
-.card-content h3 {
-  margin-bottom: 10px;
+
+/* line 85, ../sass/_index.scss */
+.card-details {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+  align-items: baseline;
 }
 
 /* ---------------------------------------------------------------------
 Project Cards (Medium Breakpoint)
 ------------------------------------------------------------------------ */
 @media (min-width: 768px) {
-  /* line 95, ../sass/_index.scss */
+  /* line 98, ../sass/_index.scss */
   .project-card {
     width: 47.61905%;
     float: left;
     margin-left: 1.19048%;
     margin-right: 1.19048%;
+    height: 408px;
   }
-  /* line 98, ../sass/_index.scss */
+  /* line 102, ../sass/_index.scss */
   .project-card:nth-child(1) {
     width: 97.61905%;
     float: left;
     margin-left: 1.19048%;
     margin-right: 1.19048%;
   }
-  /* line 102, ../sass/_index.scss */
-  .project-card:nth-child(n+2) {
-    height: 400px;
-  }
-
-  /* line 107, ../sass/_index.scss */
-  .card-image {
+  /* line 106, ../sass/_index.scss */
+  .project-card .card-image {
     height: 265px;
+  }
+  /* line 110, ../sass/_index.scss */
+  .project-card .card-content {
+    padding-bottom: 0px;
+  }
+}
+/*One-off heigh adjustment for cards with long descriptions*/
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* line 118, ../sass/_index.scss */
+  .project-card:nth-child(4), .project-card:nth-child(5) {
+    height: 426px;
   }
 }
 /* ---------------------------------------------------------------------
  Project Cards (Large Breakpoint)
  ------------------------------------------------------------------------ */
 @media (min-width: 1024px) {
-  /* line 118, ../sass/_index.scss */
+  /* line 129, ../sass/_index.scss */
   .project-card {
     width: 33.03571%;
     float: left;
     margin-left: 1.19048%;
     margin-right: 1.19048%;
-    height: 400px;
     margin-bottom: 40px;
   }
-  /* line 123, ../sass/_index.scss */
+  /* line 133, ../sass/_index.scss */
   .project-card:nth-child(1) {
     width: 62.20238%;
     float: left;
@@ -635,7 +655,7 @@ Project Cards (Medium Breakpoint)
     margin-right: 1.19048%;
   }
 
-  /* line 128, ../sass/_index.scss */
+  /* line 138, ../sass/_index.scss */
   .primary-card {
     width: 62.20238%;
     float: left;
@@ -648,7 +668,7 @@ Project Cards (Medium Breakpoint)
  ------------------------------------------------------------------------ */
 /* line 5, ../sass/_project.scss */
 .project_content-container {
-  max-width: 1140px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding: 64px 0 150px 0;
@@ -685,21 +705,22 @@ Project Cards (Medium Breakpoint)
   margin-bottom: 24px;
 }
 /* line 27, ../sass/_project.scss */
-.breadcrumb-container .current-project {
-  margin-left: 4px;
-}
-/* line 31, ../sass/_project.scss */
 .breadcrumb-container a {
   color: #44C5A2;
 }
-/* line 34, ../sass/_project.scss */
+/* line 30, ../sass/_project.scss */
 .breadcrumb-container a:hover {
   color: #6bd1b5;
+}
+/* line 35, ../sass/_project.scss */
+.breadcrumb-container .current-project {
+  margin-left: 4px;
+  color: #A8A8A8;
 }
 
 /*Hide at Small Breakpoint*/
 @media (max-width: 1024px) {
-  /* line 43, ../sass/_project.scss */
+  /* line 44, ../sass/_project.scss */
   .breadcrumb-container {
     display: none;
   }
@@ -707,7 +728,7 @@ Project Cards (Medium Breakpoint)
 /* ---------------------------------------------------------------------
  Images (Mobile-first)
  ------------------------------------------------------------------------ */
-/* line 52, ../sass/_project.scss */
+/* line 53, ../sass/_project.scss */
 .project_image-container {
   /*Mobile-first Width*/
   width: 97.61905%;
@@ -715,21 +736,21 @@ Project Cards (Medium Breakpoint)
   margin-left: 1.19048%;
   margin-right: 1.19048%;
 }
-/* line 56, ../sass/_project.scss */
+/* line 57, ../sass/_project.scss */
 .project_image-container img {
   margin-bottom: 2.5rem;
   width: 100%;
 }
-/* line 60, ../sass/_project.scss */
+/* line 61, ../sass/_project.scss */
 .project_image-container img:last-child {
   margin-bottom: 0;
 }
 
 /*Shrink at Large Breakpoint*/
 @media (min-width: 1024px) {
-  /* line 69, ../sass/_project.scss */
+  /* line 70, ../sass/_project.scss */
   .project_image-container {
-    width: 58.03571%;
+    width: 60.11905%;
     float: left;
     margin-left: 1.19048%;
     margin-right: 1.19048%;
@@ -738,7 +759,7 @@ Project Cards (Medium Breakpoint)
 /* ---------------------------------------------------------------------
 Project Description
 ------------------------------------------------------------------------ */
-/* line 79, ../sass/_project.scss */
+/* line 80, ../sass/_project.scss */
 .description-container {
   width: 30.95238%;
   float: right;
@@ -747,19 +768,19 @@ Project Description
   margin-bottom: 24px;
 }
 
-/* line 84, ../sass/_project.scss */
+/* line 85, ../sass/_project.scss */
 .project-description {
   margin-bottom: 4px;
 }
 
-/* line 88, ../sass/_project.scss */
+/* line 89, ../sass/_project.scss */
 .project-title {
   margin-bottom: 40px;
 }
 
 /*Adjust at Small Breakpoint*/
 @media (max-width: 1024px) {
-  /* line 96, ../sass/_project.scss */
+  /* line 97, ../sass/_project.scss */
   .description-container {
     width: 80.95238%;
     float: left;
@@ -767,13 +788,13 @@ Project Description
     margin-right: 1.19048%;
   }
 
-  /* line 100, ../sass/_project.scss */
+  /* line 101, ../sass/_project.scss */
   .project-title {
     margin-bottom: 16px;
   }
 }
 @media (max-width: 768px) {
-  /* line 106, ../sass/_project.scss */
+  /* line 107, ../sass/_project.scss */
   .description-container {
     width: 97.61905%;
     float: left;
@@ -784,7 +805,7 @@ Project Description
 /* ---------------------------------------------------------------------
  Links Container
  ------------------------------------------------------------------------ */
-/* line 115, ../sass/_project.scss */
+/* line 116, ../sass/_project.scss */
 .links-container {
   width: 30.95238%;
   float: right;
@@ -797,7 +818,7 @@ Project Description
 
 /*Widen at Small Breakpoint*/
 @media (max-width: 1024px) {
-  /* line 124, ../sass/_project.scss */
+  /* line 125, ../sass/_project.scss */
   .links-container {
     width: 97.61905%;
     float: left;
@@ -807,26 +828,26 @@ Project Description
     justify-content: center;
   }
 }
-/* line 131, ../sass/_project.scss */
+/* line 132, ../sass/_project.scss */
 .single-link-container {
   display: flex;
 }
-/* line 135, ../sass/_project.scss */
+/* line 136, ../sass/_project.scss */
 .single-link-container:hover .project-link {
   color: #6bd1b5;
 }
-/* line 139, ../sass/_project.scss */
+/* line 140, ../sass/_project.scss */
 .single-link-container:hover .arrow {
   stroke: #6bd1b5;
 }
 @media (max-width: 1024px) {
-  /* line 131, ../sass/_project.scss */
+  /* line 132, ../sass/_project.scss */
   .single-link-container {
     margin: 0 40px;
   }
 }
 
-/* line 154, ../sass/_project.scss */
+/* line 150, ../sass/_project.scss */
 .project-link {
   font-size: 16px;
   color: #44C5A2;
@@ -843,16 +864,16 @@ Project Description
   -webkit-transition-timing-function: ease-in;
   transition-timing-function: ease-in;
 }
-/* line 162, ../sass/_project.scss */
+/* line 158, ../sass/_project.scss */
 .project-link:nth-child(1) {
   margin-right: 6px;
 }
-/* line 166, ../sass/_project.scss */
+/* line 162, ../sass/_project.scss */
 .project-link:nth-child(2) {
   margin-left: 6px;
 }
 
-/* line 171, ../sass/_project.scss */
+/* line 167, ../sass/_project.scss */
 .arrow {
   stroke: #44C5A2;
   -moz-transition-property: color, fill;
@@ -874,7 +895,7 @@ Project Description
  ------------------------------------------------------------------------ */
 /* line 5, ../sass/_about.scss */
 .about_page-container {
-  max-width: 1140px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding: 32px 0 75px 0;
