--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -71,7 +71,8 @@ h2 {
 
 h3 {
 	color: $primary;
-	font-size: 24px;
+	font-family: $headline-font;
+	font-size: 28px;
 	font-weight: 600;
 	letter-spacing: .25px;
 	
@@ -81,13 +82,21 @@ h3 {
 }
 
 h4 {
-	color: $tertiary;
-	font-size: 14px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
+	color: $primary;
+	font-size: 16px;
+	font-weight: 700;
 
 	@media (max-width: $medium-break) {
-	font-size: 13px;	
+	font-size: 14px;	
+	}
+}
+
+h5 {
+	color: $tertiary;
+	font-size: 15px;
+
+	@media (max-width: $medium-break) {
+	font-size: 14px;	
 	}
 }
 
