--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -13,7 +13,7 @@
 
  .project-header {
  	@include span(12 nest);
- 	margin-bottom: 126px;
+ 	margin-bottom: 88px;
  }	
 
  .site-title {
@@ -31,12 +31,12 @@
 
  @media (max-width: $medium-break) {
 
-	.project-content {
+ 	.project-content {
  		padding: 32px 0 48px 0;
  	}
 
  	.project-header {
-	margin-bottom: 48px;
+ 		margin-bottom: 48px;
  	}
 
  	.site-title,
@@ -75,15 +75,18 @@
  }
 
  .card-content {
- 	padding: 16px 1.5rem 16px 1.5rem;
-
- 	h4 {
- 		margin-bottom: 4px;
- 	}
+ 	padding: 16px 1.5rem 18px 1.5rem;
 
  	h3 {
- 		margin-bottom: 10px;
+ 		margin-bottom: 4px;
  	}
+ }
+
+ .card-details {
+ 	display: flex;
+ 	justify-content: space-between;
+ 	margin-bottom: 16px;
+ 	align-items: baseline;
  }
 
  /* ---------------------------------------------------------------------
@@ -94,18 +97,26 @@
 
  	.project-card {
  		@include span(6);
+ 		height: 408px;
 
  		&:nth-child(1) {
  			@include span(12);
  		}
 
-		&:nth-child(n+2) {
-			height: 400px;
-		}
- 	}
+ 		.card-image {
+ 			height: 265px;
+ 		}
 
- 	.card-image {
- 		height: 265px;
+ 		.card-content {
+ 			padding-bottom: 0px;
+ 		}
+ 	}
+ }
+
+ /*One-off heigh adjustment for cards with long descriptions*/ 
+ @media (min-width: $medium-break) and (max-width: $large-break) {
+ 	.project-card:nth-child(4), .project-card:nth-child(5) {
+ 		height: 426px;
  	}
  }
 
@@ -117,7 +128,6 @@
 
  	.project-card {
  		@include span(4.25);
- 		height: 400px;
  		margin-bottom: 40px;
 
  		&:nth-child(1) {
@@ -129,3 +139,4 @@
  		@include span(7.75);
  	}
  }
+
