--- a/sass/_background.scss
+++ b/sass/_background.scss
@@ -13,6 +13,13 @@
  	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, $background-color 30%, $background-color 100%));	
  }
 
+  @media (max-width: $medium-break) {
+
+ 	.home-background {
+ 		@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, $background-color 15%, $background-color 100%));	
+ 	}
+ }
+
  .avant-background {
  	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 45%, $background-color 45%, $background-color 100%));	
  }
@@ -37,9 +44,8 @@
  	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, $background-color 30%, $background-color 100%));	
  }
 
- @media (max-width: $medium-break) {
-
- 	.home-background {
- 		@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, $background-color 15%, $background-color 100%));	
+ @media (max-width: $large-break) {
+ 	.avant-background, .jiang_china_design-background, .listening_devices-background, .morningstar-background, .planet_finance_china-background, .smart_air-background {
+ 		display: none;
  	}
  }
