--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -5,14 +5,16 @@
  	background-color: #fff;
  }
 
- .footer-content {
+ .footer-container {
  	@include container($max-width);
- 	margin: 0 auto;
+ }
+
+ .footer-content {
+ 	@include span(12);
  	padding: 3rem 0 8rem 0;
  }
 
  .footer-wrapper {
- 	@include span(12);
  	display: flex;
  	justify-content: space-between;
  	align-items: center;
@@ -43,10 +45,21 @@
  	}
  }
 
-.icon {
-	height: 25px;
+ .icon {
+ 	height: 25px;
  	width: 25px;
-}
+ }
+
+/* ---------------------------------------------------------------------
+ Footer (Medium Breakpoint)
+ ------------------------------------------------------------------------ */
+
+ @media (max-width: $large-break) {
+ 	.footer-border {
+ 		border-top: 1px solid #E4E4E4;
+ 	}
+ }
+
 
 /* ---------------------------------------------------------------------
  Footer (Small Breakpoint)
